# stackcalc

./: CMakeLists.txt  README.md  manual.md
.github/workflows/: release.yml
assets/: icon.icns
cmake/: BuildGMP.cmake  BuildMPFR.cmake  FetchGMP.cmake  FetchGoogleTest.cmake  FetchImGui.cmake  FetchMPFR.cmake  FetchWxWidgets.cmake  mingw-w64-x86_64.cmake
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  operations.cpp  operations.h  operations.hpp  stack.cpp  stack.h  stack.hpp  trail.cpp  trail.h  trail.hpp  undo.cpp  undo.h  undo.hpp  variables.cpp  variables.h  variables.hpp
src/controller/: CMakeLists.txt  controller.cpp  controller.h  controller.hpp  display_state.h  display_state.hpp  input_state.cpp  input_state.h  input_state.hpp  key_event.cpp  key_event.h  key_map.cpp  key_map.hpp  persistence.cpp  persistence.h  persistence.hpp
src/core/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  arithmetic.hpp  bitwise.cpp  bitwise.h  bitwise.hpp  calc_runner.cpp  calc_runner.hpp  cancel.cpp  cancel.hpp  coercion.cpp  coercion.h  coercion.hpp  complex.cpp  complex.h  complex.hpp  constants.cpp  constants.h  constants.hpp  decimal_float.cpp  decimal_float.h  decimal_float.hpp  error_form.cpp  error_form.h  error_form.hpp  formatter.cpp  formatter.h  formatter.hpp  fraction.cpp  fraction.h  fraction.hpp  hms.cpp  hms.h  hms.hpp  infinity.cpp  infinity.h  infinity.hpp  integer.cpp  integer.h  (+21 more)
src/gui/: CMakeLists.txt  gui_app.cpp  gui_app.h  gui_app.hpp  main.cpp  stackcalc.manifest  stackcalc.manifest.in  stackcalc.rc  version.hpp.in
tests/: CMakeLists.txt
tests/calc/: CMakeLists.txt  arithmetic_test.cpp  modes_test.cpp  stack_test.cpp  trail_test.cpp  undo_test.cpp  variables_test.cpp
tests/controller/: CMakeLists.txt  controller_test.cpp  input_state_test.cpp  persistence_test.cpp
tests/core/: CMakeLists.txt  bitwise_test.cpp  calc_runner_test.cpp  cancel_test.cpp  coercion_test.cpp  complex_test.cpp  constants_test.cpp  decimal_float_test.cpp  error_form_test.cpp  formatter_test.cpp  fraction_test.cpp  hms_test.cpp  infinity_test.cpp  integer_test.cpp  interval_test.cpp  limits_test.cpp  modulo_form_test.cpp  mpz_int64_test.cpp  number_theory_test.cpp  scientific_test.cpp  vector_test.cpp
tools/: build-icons.sh  pack-ico.py
